# L2CS-Net

./: .gitignore  README.md  demo.py  estimator.py  leave_one_out_eval.py  pyproject.toml  requirements.txt  test.py  train.py  utils.py
datasets/: README.md
l2cs/: __init__.py  datasets.py  model.py  pipeline.py  results.py  utils.py  vis.py
models/: README.md
